update project dependencies and android.support migrated to androidx